postgres/deploy-gitlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2023-08-11T07:11:13Z","generation":1,"name":"gitlab-deployment","namespace":"postgres","resourceVersion":"1282954","uid":"63baa51b-6b9a-4ed6-8114-082f7b1f13b3"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"gitlab"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"R [...]
  creationTimestamp: "2023-08-11T09:16:25Z"
  generation: 2
  name: gitlab-deployment
  namespace: postgres
  resourceVersion: "1322819"
  uid: 0cc6d51b-ebc3-4f9c-98d7-88239b886975
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-08-11T09:32:04Z"
      creationTimestamp: null
      labels:
        app: gitlab
    spec:
      containers:
      - env:
        - name: POSTGRES_HOST
          value: 10.109.122.84
        - name: POSTGRES_PORT
          value: "5432"
        - name: POSTGRES_DB
          value: yourdbname
        - name: POSTGRES_USER
          value: yourdbuser
        - name: POSTGRES_PASSWORD
          value: yourdbpassword
        image: gitlab/gitlab-ce:latest
        imagePullPolicy: Always
        name: gitlab-container
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 22
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-config
        - mountPath: /var/log/gitlab
          name: gitlab-logs
        - mountPath: /var/opt/gitlab
          name: gitlab-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitlab-config
        persistentVolumeClaim:
          claimName: gitlab-config
      - name: gitlab-logs
        persistentVolumeClaim:
          claimName: gitlab-logs
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-08-11T09:16:25Z"
    lastUpdateTime: "2023-08-11T09:32:07Z"
    message: ReplicaSet "gitlab-deployment-845b9cffb8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-08-11T10:02:06Z"
    lastUpdateTime: "2023-08-11T10:02:06Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
