postgres/ingress-gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gitlab.local  # Update this with the desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-deployment
                port:
                  number: 80
